# unitn-i2i-radar-sounder-clutter-subsurface-discrimination

./: LICENSE  README.md
codebase/: .gitignore  Dockerfile  README.md  check_gpu.sh  launch_docker.ps1  launch_docker.sh  pyproject.toml  setup_and_train.sh  start-docker.ps1  start_job.sh  start_train.sh
codebase/diagrams/: CyleGan.mmd  High-Level System Architecture Horizontal.mmd  High-Level System Architecture Vertical.mmd  High-Level System Architecture.mmd  Memory-Efficient Data Loading Strategy.mmd  Pix2Pix.mmd  README.md
codebase/notebooks/: README.md  generate_thesis_plots.ipynb  read_datagram.ipynb
codebase/scripts/: README.md  benchmark_models.py  compare_models.py  detect_anomalies.py  evaluate_anomalies.py  extract_dataset_stats.py  generate_anomaly_thesis_plots.py  run_experiments.py  test.py  train.py  tune_hyperparameters.py
codebase/scripts/config_files/: config.yaml  detection_config.yaml  experiments.yaml  tune_config.yaml
codebase/src/: README.md  utils.py
codebase/src/core/: README.md  __init__.py  anomaly_detector.py  anomaly_injector.py  config.py  evaluation.py  logger.py  pipelines.py  run_manager.py
codebase/src/dataset/: README.md  __init__.py  caching.py  mapdataset.py  processing.py  validation.py
codebase/src/models/: README.md  __init__.py  base_model.py  cyclegan.py  pix2pix.py
codebase/src/models/architectures/: __init__.py  patchgan.py  resnet_generator.py  unet_generator.py
codebase/src/scripting/: __init__.py  _scripting.py
presentation/: I2I Translation for assisted subsurface detection in RS data.pptx
(+46 files in other folders)
